# camera_hook

./: .classpath  .gitignore  .project  IMPROVEMENT_PLAN.md  PROJECT_STATE.md  README.md  build.gradle  build_log.txt  create.bat  final_build_log.txt  final_build_log_v2.txt  gradle.properties  local.properties  settings.gradle  test_output.txt  test_output_2.txt
.github/workflows/: android-build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_processor.cpp
app/src/main/cpp/libyuv/: CMakeLists.txt
app/src/main/res/drawable/: bg_badge.xml  bg_bottom_sheet_handle.xml  ic_apps.xml  ic_back.xml  ic_camera_placeholder.xml  ic_clear.xml  ic_copy.xml  ic_debug.xml  ic_export.xml  ic_help.xml  ic_image.xml  ic_info.xml  ic_launcher_foreground.xml  ic_logs.xml  ic_notifications.xml  ic_picker.xml  ic_power.xml  ic_save.xml  ic_scroll_bottom.xml  ic_search.xml  ic_share.xml
app/src/main/res/layout/: activity_app_selection.xml  activity_app_selection_new.xml  activity_log_viewer.xml  activity_picker.xml  activity_settings.xml  fragment_image_picker.xml  item_app.xml  item_log_entry.xml  list_item_app_mode.xml  preference_category.xml  preference_item.xml
app/src/main/res/menu/: menu_app_selection.xml  menu_log_viewer.xml  menu_log_viewer_bottom.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: preferences.xml
docs/: UI_UX_REVAMP_PLAN.md
(+26 files in other folders)
